samples/_failures_safe/1761369703_d3eaa1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_34eb0222.c: In function ‘tokenize’:
./samples/SAFE/__tmp_34eb0222.c:149:13: error: expected declaration or statement at end of input
  149 |             continue;
      |             ^~~~~~~~
./samples/SAFE/__tmp_34eb0222.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_34eb0222.c:149:13: error: expected declaration or statement at end of input
